--- a/IssuesSystem.MVC/Views/Tickets/Index.cshtml
+++ b/IssuesSystem.MVC/Views/Tickets/Index.cshtml
@@ -20,9 +20,9 @@
         <div class="card-body">
             <h4>Title : @(Ticket.title)</h4>
             <h5 class="text-danger">Severity : @(Ticket.sev)</h5>
-            <h5 class="text-success">Description : @(Ticket.desc)</h5>
-          
-
+                <h5 class="text-success">Description : @(Ticket.desc)</h5>
+                <h5 class="text-success">Department : @(Ticket.dept)</h5>
+                <h5 class="text-success">Developer : @(Ticket.dev)</h5>
             <div class="my-2"><a href="/Tickets/details/@(Ticket.id)"><button class="btn btn-success w-100">Details</button></a></div>
         </div>
     </div>
